# manga-arr

./: .dockerignore  .env  .env.example  .gitignore  .gitleaks.toml  .mailmap  .semgrepignore  .trivyignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  SUPPORT.md  compose.yaml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt  token-usage-output.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  dependabot.yml.disabled
.serena/: project.yml
app/: auth.py  auth_cli.py  backups.py  cf_presets.py  cli.py  clients.py  comicinfo.py  config.py  cover_images.py  docker_entrypoint.py  evaluation.py  events.py  files.py  grab.py  grab_backlog.py  grab_core.py  grab_dedup.py  grab_rss.py  helpers.py  import_commit.py  import_discovery.py  import_download.py  import_execute.py  import_kinds.py  import_pipeline.py  import_plan.py  import_queue.py  import_staging.py  library_scan.py  main.py  metadata.py  metadata_enrichment.py  metadata_provenance.py  metadata_service.py  metadata_state.py  middleware.py  notifications.py  parsing.py  reconcile.py  reconcile_map.py  (+11 more)
docs/: audit-remediation-plan.md  deployment.md  release-qualification.md  releases.md  sonarr-parity.md
scripts/: release_metadata.py  verify_release_image.py
tests/: README.md  browser_auth.js  browser_auth_setup.js  browser_e2e.js  browser_integration.js  browser_smoke.js  mock_qbit.py  package-lock.json  package.json  run_isolated_browser.sh  screenshot-top.js  screenshot.js  (+2 more)
(+220 files in other folders)
